* Fixes Contact search dropdown shows non-contacts that link to nowhere
* Add ability to sort contact list by untagged contacts
* Allow multiple imported fields and replace existing contacts
* Adds ex wife/husband relationship
* Fix duplication of tags when filtering contacts
* Add trusted proxies to run behind a ssl terminating loadbalancer

RELEASED VERSIONS:

v2.1.1 - 2018-05-13
-------------------

* Change file structure inside the People folder (backend change)
* Remove automatic birthday reminder creation when editing a contact
* Set fixed version for MySQL in docker-compose
* Build absolute path to stubs files in UploadVCardTest and UploadVCardsTest (backend)
* Refactor how countries are fetched
* Change address fetching in API
* Add ComposerScripts links
* Fix tests to prepare for foreign keys (backend)
* Fix deploy tagged version
* Fix vagrant box
* Fix notifications being sent even if reminder rule is set to off
* Fix API locale
* Fix update command (backend)

v2.1.0 - 2018-05-03
-------------------

* Refactor vCard import
* Add support for markdown on the Journal
* Add support for markdown for Notes
* Add many unit tests on the API
* Add ability to display contact fields for each contact in the contact list through the API
* Add ability to stay in touch with a contact by sending reminders at a given interval
* Add secure Oauth route for the API login
* Fix removal of tags

v2.0.1 - 2018-04-17
-------------------

* Add ability to set relationships through the API
* Fix ordering of activites in journal
* Fix how you meet section not being shown
* Add a changelog inside the application
* Fix monica:calculatestatistics command

v2.0.0 - 2018-04-12
-------------------

* Add ability to set a journal entry date
* Use UUID instead of actual ID to identify contacts
* Add ability to show/hide sections on the Contact sheet view
* Add many more relationship types to link contacts together
* Fix called_at field in the Call object returned by the API